# gardn

./: .gitignore  .gitmodules  .gitpod.yml  INSTALLATION.md  README.md  deploy.sh  gpt.sh  nginx_location.conf  nginx_map.conf
Client/: CMakeLists.txt  DOM.cc  DOM.hh  Debug.cc  Debug.hh  Game.cc  Game.hh  Input.cc  Input.hh  Main.cc  Network.cc  Particle.cc  Particle.hh  Rendering.cc  Setup.cc  Setup.hh  Simulation.cc  Socket.cc  Socket.hh  StaticData.cc  StaticData.hh  Storage.cc  Storage.hh
Client/Assets/: Assets.hh  Flower.cc  Mob.cc  Petal.cc  Web.cc
Client/Render/: RenderChat.cc  RenderDrop.cc  RenderEntity.hh  RenderFlower.cc  RenderHealth.cc  RenderMob.cc  RenderName.cc  RenderPetal.cc  RenderWeb.cc  Renderer.cc  Renderer.hh
Client/Ui/: Button.cc  Button.hh  Choose.cc  Choose.hh  Container.cc  Container.hh  DynamicText.cc  DynamicText.hh  Element.cc  Element.hh  Extern.cc  Extern.hh  ScrollContainer.cc  ScrollContainer.hh  StaticIcon.cc  StaticIcon.hh  StaticText.cc  StaticText.hh  TextInput.cc  TextInput.hh  ToggleButton.hh  Ui.hh  Window.cc  Window.hh
Client/Ui/InGame/: Chat.cc  Chat.hh  ChatInput.cc  GameInfo.hh  InputFreeze.cc  Leaderboard.cc  LevelBar.cc  Loadout.hh  LoadoutPetal.cc  LoadoutSlot.cc  Map.cc  Mobile.cc  OverlevelTimer.cc  Tooltip.cc
Client/Ui/TitleScreen/: Changelog.cc  DeathScreen.cc  MainScreen.cc  MobGallery.cc  PetalGallery.cc  Settings.cc  StatScreen.cc  TitleScreen.hh
Client/public/: bundle.js  gardn-client  gardn-client.js  gardn-client.wasm  index.html  tos.txt
Helpers/: Array.hh  Bits.hh  Macros.hh  Math.cc  Math.hh  UTF8.cc  UTF8.hh  Vector.cc
Scripts/: screen_scrape.js  svg_parse.js
Server/: Bot.hh  CMakeLists.txt  Client.cc  Client.hh  DevState.cc  DevState.hh  EntityFunctions.cc  EntityFunctions.hh  Game.cc  Game.hh  Main.cc  Native.cc  PetalTracker.cc  PetalTracker.hh  Process.hh  Server.cc  Server.hh  Simulation.cc  SpatialHash.cc  SpatialHash.hh  SpatialHashCanonical.cc  SpatialHashUniform.cc  SpatialHash_.hh  Spawn.cc  Spawn.hh  TeamManager.cc  TeamManager.hh  Wasm.cc
Server/EntityFunctions/: Damage.cc  Death.cc  Detection.cc  Misc.cc
Server/Process/: Ai.cc  Bot.cc  BotNames.cc  Camera.cc  Chat.cc  Collision.cc  Culling.cc  Curse.cc  Drop.cc  Flower.cc  FlowerAi.cc  Health.cc  Motion.cc  Petal.cc  PlayerEntity.cc  Process.hh  Score.cc  Segment.cc  Web.cc
Shared/: Arena.cc  Arena.hh  Binary.cc  Binary.hh  Binary_.cc  Binary_.hh  Config.cc  Config.hh  Entity.cc  Entity.hh  EntityDef.cc  EntityDef.hh  Helpers.cc  Helpers.hh  Map.cc  Map.hh  Simulation.cc  Simulation.hh  StaticData.cc  StaticData.hh  StaticDefinitions.hh  Vector.cc  Vector.hh
